# mono-repo-with-github-actions

./: README.md
.github/workflows/: packaging-demo-main.yml
packaging-demo/: README.md  pyproject.toml
packaging-demo/src/: main.py
