[tool.poetry]
name = "packaging-demo"
version = "2.0.0"
description = ""
authors = ["najeeb <syed.najeeb@gainwelltechnologies.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[[tool.poetry.source]]
name = "artifact"
url = "https://gwt-interoperability-project-107835586611.d.codeartifact.us-east-1.amazonaws.com/pypi/fhir-repository/"
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
